# clean-code

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  cleancode.example.toml  example.toml  pyproject.toml  run_adversarial_loop.py  test_run_adversarial_loop.py  todo.md
.claude/: settings.json
.claude/skills/clean-code/: SKILL.md
.claude/skills/clean-code/references/: clean-code-judge.md  minimalism-constitution.md
.claude/skills/cleancode/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_rule.md
.github/workflows/: ci.yml  release.yml
docs/: RULES.md
docs/plans/: issue-28-what-why-classifier.md
scripts/: benchmark.py
src/cleancode/: __init__.py  cli.py  config.py  engine.py  guide.py  models.py  template.py
src/cleancode/examples/: __init__.py  _types.py  _util.py  bindings.py  clarity.py  comments.py  correctness.py  docstrings.py  duplication.py  hints.py  naming.py  noise.py  pytorch.py  semantic.py  slicing.py  solid.py  structure.py
src/cleancode/llm/: __init__.py  anthropic_client.py  claude_code_client.py  client.py  loop.py  prompts.py
src/cleancode/rules/: __init__.py  base.py  bindings.py  clarity.py  comments.py  correctness.py  docstrings.py  duplication.py  hints.py  naming.py  noise.py  pytorch.py  semantic.py  semantic_restatement.py  slicing.py  solid.py  structure.py
src/cleancode/semantics/: __init__.py  backbone.py  classifier.py  clauses.py  embeddings.npz  head.json  training.py
src/cleancode/semantics/THIRD_PARTY_NOTICES/: NOTICE.txt
tests/: conftest.py  test_benchmark.py  test_clarity.py  test_cli.py  test_comments.py  test_config.py  test_correctness.py  test_duplication.py  test_engine.py  test_examples.py  test_fixtures.py  test_guide.py  test_hints.py  test_loop.py  test_naming.py  test_noise.py  test_semantic.py  test_slicing.py  test_solid.py  test_structure.py  test_template.py  test_what_why.py
tests/fixtures/benchmark/after/: checkout.py  metrics.py  pytorch_dataset.py  solid_shapes.py  tensor.py
tests/fixtures/benchmark/before/: checkout.py  tensor.py
tests/fixtures/clean/: ast_dispatch_and_config.py  order_processing.py  order_totals.py  semantic_docstrings.py  window_slices.py
tests/fixtures/dirty/: llm_style_metrics.py  llm_style_noise.py  llm_style_paraphrase.py  llm_style_processing.py  llm_style_semantics.py  llm_style_solid.py  llm_style_types.py  pytorch_dataset.py  short_names_and_comments.py
tools/: distill_backbone.py  train_head.py  tune_head.py
tools/data/: what_why.jsonl
